--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,13 @@
           <skipStaging>true</skipStaging>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <fork>true</fork>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
