--- a/pom.xml
+++ b/pom.xml
@@ -179,14 +179,14 @@
           <skipStaging>true</skipStaging>
         </configuration>
       </plugin>
-      <plugin>
+      <!--<plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
         <configuration>
           <fork>true</fork>
         </configuration>
       </plugin>
-    </plugins>
+-->    </plugins>
   </build>
 
   <!-- Profiles -->
