--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
+<!--      <plugin>
         <artifactId>maven-deploy-plugin</artifactId>
         <version>2.7</version>
         <executions>
@@ -159,7 +159,7 @@
         <configuration>
           <skip>true</skip>
         </configuration>
-      </plugin>
+      </plugin>-->
       <plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
